--- a/practice.html
+++ b/practice.html
@@ -11,5 +11,23 @@
 
     <p>Git is a version control system to keep track of changes </p>
 
+    <!-- Here is how we can use button element  -->
+    <button type="button">Click Me!</button>
+    <button type="reset">Click Me To Reset!</button>
+    <button type="submit" disabled >Click Me To Submit!</button>
+
+    <input type="text" disabled >
+    <input type="checkbox" checked>
+
+    <label for="state">Choose a State:</label>
+
+    <select name="State" id="state">
+        <option value="VA"> Virginia </option>
+        <option value="NY"> New York </option>
+        <option value="DC"> Washington DC </option>
+        <option value="MD"> Maryland </option>
+    </select>
+
+
 </body>
 </html>
