--- a/practice.html
+++ b/practice.html
@@ -27,7 +27,24 @@
         <option value="DC"> Washington DC </option>
         <option value="MD"> Maryland </option>
     </select>
+<!-- Create text input field with label message of the day  -->
 
+<!-- how to break lines up so it can show in the next line? -->
+<!-- <br> -->
+<!-- or we can use div to wrap this section in -->
+
+    <div>
+        <label for="firstName ">Enter First Name : </label>
+        <input type="text" id="firstName">
+    </div>
+
+    <div>
+        <label for="lirstName ">Enter Last Name : </label>
+        <input type="text" id="lastName">
+    </div>
+   
+    
+        
 
 </body>
 </html>
